k8s-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snatch
spec:
  selector:
    matchLabels:
      app: snatch
  template:
    metadata:
      labels:
        app: snatch
        env: development
    spec:
      containers:
      - name: snatch
        image: gcr.io/langatan/snatch-solver@sha256:81c679fe5724975f01dfc508a0c742077280ce2323b1b1621e30f603a200b6b0
        ports:
          - containerPort: 8000
---
  apiVersion: v1
  kind: Service
  metadata:
    name: snatch-service
    labels:
      app: snatch-service
  spec:
    type: LoadBalancer
    ports:
     - port: 80
       targetPort: 8000
    selector:
      app: snatch
